--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ description = "A simple ssh server based on quic protocol"
 
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
-quinn = "0.10.2"
+#quinn = "0.10.2"
+quinn = { git = "https://github.com/marcblanchet/quinn-space.git" }
 tokio = { version = "1.36.0", features = ["full"] }
 url = "2.5.0"
 rustls = { version = "0.21.10", features = ["quic","dangerous_configuration"] }
